@@ -427,23 +427,6 @@
     </action>
   </keybind>
 -->
-  
-  <!-- Keybinding for Volume management -->
-  <keybind key="XF86AudioRaiseVolume">
-      <action name="Execute">
-          <command>amixer -q sset Master 3%+ unmute</command>
-      </action>
-  </keybind>
-  <keybind key="XF86AudioLowerVolume">
-      <action name="Execute">
-          <command>amixer -q sset Master 3%- unmute</command>
-      </action>
-  </keybind>
-  <keybind key="XF86AudioMute">
-      <action name="Execute">
-          <command>amixer -q sset Master toggle</command>
-      </action>
-  </keybind>
 
   <!-- Keybinding for terminal button-->
   <keybind key="XF86WWW">
