@@ -3,6 +3,7 @@ lubuntu-default-settings (1.4) UNRELEASED; urgency=medium
   * Remove /usr/share/applications; these files are native in LXQt.
   * Don't launch a file manager on Ctrl + Alt + D, because that already
     shows the desktop in LXQt.
+  * Remove the volume button shortcuts as these are built into LXQt.
 
  -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 20 Jul 2018 01:28:38 -0500
 
